kubernetes/authentik/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: authentik
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
  hostnames:
    - "authentik.neffi.fr"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
